--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "laravel/vapor-cli": "^1.7",
         "laravel/vapor-core": "^2.7"
     },
     "require-dev": {
