--- a/vapor.yml
+++ b/vapor.yml
@@ -1,4 +1,4 @@
-id: 10733
+id: 10750
 name: laravelvaportest
 environments:
     production:
@@ -13,7 +13,10 @@ environments:
         memory: 1024
         cli-memory: 512
         runtime: php-7.4
+        database: laravelvaportest-database
         build:
-            - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install'
+            - 'composer install --no-dev --classmap-authoritative'
             - 'php artisan event:cache'
             - 'npm ci && npm run dev && rm -rf node_modules'
+        deploy:
+            - 'php artisan migrate --force'
